# RLT_test

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
bot/: database.py  handlers.py  llm_service.py  main.py  query_builder.py
database/: load_data.py
database/migrations/: 001_initial.sql
